@@ -1,0 +1,173 @@
+PREHOOK: query: create table nzhang_test1 stored as sequencefile as select 'key1' as key, 'value
+1
+
+http://asdf' value from src limit 1
+PREHOOK: type: CREATETABLE
+PREHOOK: Input: default@src
+POSTHOOK: query: create table nzhang_test1 stored as sequencefile as select 'key1' as key, 'value
+1
+
+http://asdf' value from src limit 1
+POSTHOOK: type: CREATETABLE
+POSTHOOK: Input: default@src
+POSTHOOK: Output: default@nzhang_test1
+PREHOOK: query: select * from nzhang_test1
+PREHOOK: type: QUERY
+PREHOOK: Input: default@nzhang_test1
+PREHOOK: Output: file:/tmp/nzhang/hive_2010-08-30_23-37-49_137_345185714437305649/-mr-10000
+POSTHOOK: query: select * from nzhang_test1
+POSTHOOK: type: QUERY
+POSTHOOK: Input: default@nzhang_test1
+POSTHOOK: Output: file:/tmp/nzhang/hive_2010-08-30_23-37-49_137_345185714437305649/-mr-10000
+key1	value
+1
+
+http://asdf
+PREHOOK: query: select count(*) from nzhang_test1
+PREHOOK: type: QUERY
+PREHOOK: Input: default@nzhang_test1
+PREHOOK: Output: file:/tmp/nzhang/hive_2010-08-30_23-37-49_893_2470605464847588988/-mr-10000
+POSTHOOK: query: select count(*) from nzhang_test1
+POSTHOOK: type: QUERY
+POSTHOOK: Input: default@nzhang_test1
+POSTHOOK: Output: file:/tmp/nzhang/hive_2010-08-30_23-37-49_893_2470605464847588988/-mr-10000
+1
+PREHOOK: query: explain
+select * from nzhang_test1 where key='key1'
+PREHOOK: type: QUERY
+POSTHOOK: query: explain
+select * from nzhang_test1 where key='key1'
+POSTHOOK: type: QUERY
+ABSTRACT SYNTAX TREE:
+  (TOK_QUERY (TOK_FROM (TOK_TABREF nzhang_test1)) (TOK_INSERT (TOK_DESTINATION (TOK_DIR TOK_TMP_FILE)) (TOK_SELECT (TOK_SELEXPR TOK_ALLCOLREF)) (TOK_WHERE (= (TOK_TABLE_OR_COL key) 'key1'))))
+
+STAGE DEPENDENCIES:
+  Stage-1 is a root stage
+  Stage-0 is a root stage
+
+STAGE PLANS:
+  Stage: Stage-1
+    Map Reduce
+      Alias -> Map Operator Tree:
+        nzhang_test1 
+          TableScan
+            alias: nzhang_test1
+            Filter Operator
+              predicate:
+                  expr: (key = 'key1')
+                  type: boolean
+              Filter Operator
+                predicate:
+                    expr: (key = 'key1')
+                    type: boolean
+                Select Operator
+                  expressions:
+                        expr: key
+                        type: string
+                        expr: value
+                        type: string
+                  outputColumnNames: _col0, _col1
+                  File Output Operator
+                    compressed: false
+                    GlobalTableId: 0
+                    table:
+                        input format: org.apache.hadoop.mapred.TextInputFormat
+                        output format: org.apache.hadoop.hive.ql.io.HiveIgnoreKeyTextOutputFormat
+
+  Stage: Stage-0
+    Fetch Operator
+      limit: -1
+
+
+PREHOOK: query: select * from nzhang_test1 where key='key1'
+PREHOOK: type: QUERY
+PREHOOK: Input: default@nzhang_test1
+PREHOOK: Output: file:/tmp/nzhang/hive_2010-08-30_23-37-56_447_1539901914223140072/-mr-10000
+POSTHOOK: query: select * from nzhang_test1 where key='key1'
+POSTHOOK: type: QUERY
+POSTHOOK: Input: default@nzhang_test1
+POSTHOOK: Output: file:/tmp/nzhang/hive_2010-08-30_23-37-56_447_1539901914223140072/-mr-10000
+key1	value
+1	NULL
+	NULL
+http://asdf	NULL
+PREHOOK: query: select * from nzhang_test1
+PREHOOK: type: QUERY
+PREHOOK: Input: default@nzhang_test1
+PREHOOK: Output: file:/tmp/nzhang/hive_2010-08-30_23-38-00_606_2534525216891512327/-mr-10000
+POSTHOOK: query: select * from nzhang_test1
+POSTHOOK: type: QUERY
+POSTHOOK: Input: default@nzhang_test1
+POSTHOOK: Output: file:/tmp/nzhang/hive_2010-08-30_23-38-00_606_2534525216891512327/-mr-10000
+key1	value
+1
+
+http://asdf
+PREHOOK: query: select count(*) from nzhang_test1
+PREHOOK: type: QUERY
+PREHOOK: Input: default@nzhang_test1
+PREHOOK: Output: file:/tmp/nzhang/hive_2010-08-30_23-38-02_968_2091791272244763520/-mr-10000
+POSTHOOK: query: select count(*) from nzhang_test1
+POSTHOOK: type: QUERY
+POSTHOOK: Input: default@nzhang_test1
+POSTHOOK: Output: file:/tmp/nzhang/hive_2010-08-30_23-38-02_968_2091791272244763520/-mr-10000
+1
+PREHOOK: query: explain
+select * from nzhang_test1 where key='key1'
+PREHOOK: type: QUERY
+POSTHOOK: query: explain
+select * from nzhang_test1 where key='key1'
+POSTHOOK: type: QUERY
+ABSTRACT SYNTAX TREE:
+  (TOK_QUERY (TOK_FROM (TOK_TABREF nzhang_test1)) (TOK_INSERT (TOK_DESTINATION (TOK_DIR TOK_TMP_FILE)) (TOK_SELECT (TOK_SELEXPR TOK_ALLCOLREF)) (TOK_WHERE (= (TOK_TABLE_OR_COL key) 'key1'))))
+
+STAGE DEPENDENCIES:
+  Stage-1 is a root stage
+  Stage-0 is a root stage
+
+STAGE PLANS:
+  Stage: Stage-1
+    Map Reduce
+      Alias -> Map Operator Tree:
+        nzhang_test1 
+          TableScan
+            alias: nzhang_test1
+            Filter Operator
+              predicate:
+                  expr: (key = 'key1')
+                  type: boolean
+              Filter Operator
+                predicate:
+                    expr: (key = 'key1')
+                    type: boolean
+                Select Operator
+                  expressions:
+                        expr: key
+                        type: string
+                        expr: value
+                        type: string
+                  outputColumnNames: _col0, _col1
+                  File Output Operator
+                    compressed: false
+                    GlobalTableId: 0
+                    table:
+                        input format: org.apache.hadoop.mapred.SequenceFileInputFormat
+                        output format: org.apache.hadoop.hive.ql.io.HiveSequenceFileOutputFormat
+
+  Stage: Stage-0
+    Fetch Operator
+      limit: -1
+
+
+PREHOOK: query: select * from nzhang_test1 where key='key1'
+PREHOOK: type: QUERY
+PREHOOK: Input: default@nzhang_test1
+PREHOOK: Output: file:/tmp/nzhang/hive_2010-08-30_23-38-09_247_8932362895617955403/-mr-10000
+POSTHOOK: query: select * from nzhang_test1 where key='key1'
+POSTHOOK: type: QUERY
+POSTHOOK: Input: default@nzhang_test1
+POSTHOOK: Output: file:/tmp/nzhang/hive_2010-08-30_23-38-09_247_8932362895617955403/-mr-10000
+key1	value
+1
+
+http://asdf
